# Deep_Past_Challenge

./: .gitignore  README.md  pyproject.toml
app/: README.md  dictionary.py  dictionary_lookup.py  lexicon_lookup.py  sentence_lookup.py  server.py  start.sh
model/: README.md  __init__.py  byt5.py  calc.sh  calc_score.py  common.py  predict.py  train.py  train_marian_ar_en.py
model/ft/: __init__.py  train_byt5_small_continue.py  train_byt5_small_continue.sh
model/ft/dict/: __init__.py  infer_with_dictionary.py  train_byt5_with_dictionary.py  train_byt5_with_dictionary.sh  train_byt5_with_dictionary_rl.py  train_byt5_with_dictionary_rl.sh
model/ft/distill/: README.md  train_expand.py
model/infer/: ensemble.py  ensemble_simple.py
model/infer/best/: ensemble.py  ensemble_dict.py  mix_ensemble.py  model_merge.py
other/: data.md
refine/: FOUND.md  build_train_refined_splitted_augment.py  build_train_truncated.py  mathematicals.py  refine.sh  refine_train.py  refine_train_v2.py  visualize.py
refine/api/: clean_sentence_split_output.py  train_openai_gloss.py  train_openai_sentence_split.py  train_openai_sentence_split.sh
refine/augment/: README.md  build_item_swap_augment.py  build_pn_gn_swap_augment.py  build_train_refined_splitted.py
refine/augment/pdf/: README.md  build_parallel_openai_sentence_split.py  build_parallel_openai_sentence_split.sh  (+9 more)
refine/dict/: refine_dict.py  register_quoted_vocabulary.py  train_translation_dict.py
refine/onomasticon/: refine.py
refine/v2/: truncate.py
samples/: 2025.r2lm-1.5.md  Llama3_1_(8B)_Alpaca.ipynb
search/: find_missing_translation_pn_matches.py  find_translation_pn_gn_frequencies.py  find_transliteration_pn_gn_frequencies.py  train_translation_missing_pn_matches.csv  train_translation_pn_frequencies.csv  train_translation_pn_gn_frequencies.csv  train_transliteration_pn_gn_frequencies.csv
search/result/: add_column.py
