[project]
name = "deep-past-challenge"
version = "0.1.0"
description = "Training and inference pipeline for Akkadian transliteration to translation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.4.0,<2.0.0",
    "datasets>=3.4.0,<5.0.0",
    "numpy>=2.2.3,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "peft>=0.14.0,<1.0.0",
    "sacrebleu>=2.5.1,<3.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "sentencepiece>=0.2.0,<0.3.0",
    "torch>=2.6.0,<3.0.0",
    "transformers>=4.50.0,<5.0.0",
    "wandb>=0.19.8,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["model"]

[tool.hatch.build.targets.sdist]
include = [
    "model",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
