[project]
name = "deep-past-challenge"
version = "0.1.0"
description = "Training and inference pipeline for Akkadian transliteration to translation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.49.2",
    "datasets>=3.4.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "trl>=0.22.2",
    "tqdm>=4.67.1",
    "unsloth",
    "wandb>=0.19.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["model"]

[tool.hatch.build.targets.sdist]
include = [
    "model",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
